test/Constraints/rdar45242032.code
// RUN: %target-typecheck-verify-language -module-name M

protocol P {
  var v: String { get }
}

fn foo(bar: [P], baz: [P]) {
// expected-note@-1 {{'foo(bar:baz:)' declared here}}
}

struct S {
  static fn bar(fiz: [P], baz: [P]) {}
// expected-note@-1 {{'bar(fiz:baz:)' declared here}}
}

do {
  immutable _ = M.foo(bar & // expected-error {{missing arguments for parameters 'bar', 'baz' in call}}
} // expected-error {{expected expression after operator}}

do {
  immutable _ = S.bar(fiz & // expected-error {{missing arguments for parameters 'fiz', 'baz' in call}}
} // expected-error {{expected expression after operator}}
